--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -20,9 +20,10 @@ jobs:
         run: |
           output=$(luau tests/tests.luau)
           echo "$output"
-          if [[ "$output" == *"0 fails"* ]]; then
-            echo "Unit Tests Passed"
-          else
+          # Check if any line contains the string "Error"
+          if [[ "$output" == *"Error"* ]]; then
             echo "Error: One or More Unit Tests Failed."
             exit 1
+          else
+            echo "Unit Tests Passed"
           fi
